Fix issue on mobile menu links not being clickable

--- a/src/components/shared/MobileMenu/MobileMenu.module.css
+++ b/src/components/shared/MobileMenu/MobileMenu.module.css
@@ -11,6 +11,7 @@
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 3;
   width: 83.75%;
   height: 100%;
   display: flex;
@@ -34,6 +35,7 @@
 }
 
 .mobileMenuNav {
+  width: 100%;
   padding: 3rem 0;
 }
 
@@ -53,12 +55,4 @@
 
 .scheduleDemoBtn {
   width: 100%;
-}
-
-.backgoundPatternImg {
-  position: absolute;
-  top: -100px;
-  left: 0;
-  width: 250%;
-  z-index: 1;
 }
